* Parallax banner: fixed parallax effect (doesn't run it when don't exist a image and container)
* LSX Banners: making LSX compatible with new LSX Banners slider
* Enabled extra attributes (srcset, sizes) in img tag (add_filter: wp_kses_allowed_html)
* Uses the theme version to add the styles and scripts resources

### 1.7.3
* Removed blue banner (with title) from the homepage (always)
* Added a wrap in banner to fix IE10/11 vertical alignment
* Small fix: removed height:auto from default images
* Small fixes in customizer colours: improved selectors
* Fixed customizer colours: live changes were not working

### 1.7.2
* Envira Gallery: added "Lazy Load Images" to Envira Gallery
* Default pagination: fixed wrap spacing
* Bootstrap: removed "!important" from some general classes
* Responsive: added new class for buttons full width in mobile (btn-mobile-fullwidth)
* LSX Mega Menus: created compatibility with LSX Mega Menus plugin
* Removed blue banner (with title) from the homepage (always)
* Added gulp command to auto-generate WordPress language files (gulp wordpress-lang)
* Added option to use LSX Mega Menus in Top Menu
* General small fixes

### 1.7.1
* Customizer colour swatch: printing the custom styles in footer
* Customizer colour swatch: fixed the box-shadow color from articles in blog pages
* Lazy Loading Images: added a class to bypass a image
* Lazy Loading Images: improved the regular expressions for only replace the images with source
* Lazy Loading Images: added an option in WP admin to enable/disable it
* Banners: resolved conflict between LSX Banners and LSX
* Fixed with fallback: for some reason sometimes wp_get_attachment_image_srcset fails
* Added in a filter to remove the "Custom Fields" meta box
* Two new hooks/actions added in all layouts: lsx_content_wrap_before and lsx_content_wrap_after
* Fixed: sometimes the image banner show up without an image set
* Titles for pages and posts standardised

### 1.7.0
* Added a colour swatch to customizer