@@ -34,6 +34,7 @@
 * LSX Banners: making LSX compatible with new LSX Banners slider
 * Enabled extra attributes (srcset, sizes) in img tag (add_filter: wp_kses_allowed_html)
 * Uses the theme version to add the styles and scripts resources
+* Removed WP Customizer prompt for empty main navigation
 
 ### 1.7.3
 * Removed blue banner (with title) from the homepage (always)
